<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blanco"
    android:orientation="vertical"
    tools:context=".activities.editProfileActivity">
    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:orientation="vertical"
            android:background="@drawable/background_profile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>


        <Button
            android:id="@+id/changePicture"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:background="@drawable/background_profile"
            android:text="@string/text_button_edit_profile_change_photo"
            android:textColor="@color/Blanco"
            android:textSize="10sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/tet_edit_profile_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/Text_edit_profile_user_name" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/Text_view_edit_profile_private_information"
        android:textAlignment="center"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
            android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/Text_edit_profile_email_address" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/Text_edit_profile_phone_number" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    </ScrollView>