<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blanco"
    android:orientation="vertical"
    tools:context=".activities.loginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:paddingTop="30dp" >

                <ImageView
                    android:layout_width="339dp"
                    android:layout_height="155dp"
                    android:src="@drawable/ic_logo2" />
            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_Text_Email"


                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_Text_Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editsTextsContainer"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_login"
                android:gravity="bottom"
                android:onClick="onClick"
                android:text="@string/button_login"
                android:textAlignment="center"
                android:textColor="@color/Blanco" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"

            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_login_transparent"
                android:onClick="onClick"
                android:text="@string/button_register"
                android:textColor="@color/colorButtonsLogin"
                android:typeface="sans" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>