<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    tools:context=".activities.signUpActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center"
            android:paddingTop="30dp" >
            <ImageView
                android:layout_width="339dp"
                android:layout_height="155dp"
                android:src="@drawable/ic_logo2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Text_View_Login"
                android:textSize="30sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_Text_Email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_Text_Email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_Text_Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editsTextsContainer"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/card_view_login"
                android:onClick="onClick"
                android:text="Registrar"
                android:textColor="@color/Blanco"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"

            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="280dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_login_transparent"
                android:onClick="onClick"
                android:text="@string/button_login"
                android:textColor="@color/colorButtonsLogin"
                android:typeface="sans" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>